# wisardlib

./: .gitignore  LICENSE  README.md  Untitled.ipynb  pyproject.toml  run_jupyter_lab.sh
.devcontainer/: Dockerfile  devcontainer.json  post_start.sh
analysis/: analyse_results.ipynb  analyse_results_2.ipynb  analyse_results_neucom.ipynb  datasets_info.json  ml_performance_memory_table.csv  relative_results.csv  results.csv  results_knn_folded.csv  results_mlp2_folded.csv  results_mlp_folded.csv  results_relative.csv  results_relative_bloom.csv  results_relative_pareto.csv  results_rf_folded.csv  results_sklearn_folded.csv  results_svm_folded.csv  utils.py
analysis/tables/: datasets_info.tex  ml_performance_memory_table.tex  performance_size_table.tex  performance_table.tex  performance_table_bloom.tex  size_table.tex  size_table_bloom.tex
data/breast_cancer/: data.pkl
data/glass/: data.pkl
data/letter/: data.pkl
data/wine/: data.pkl
docs/: .buildinfo  api.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: overview.rst.txt
docs/source/: api.rst  conf.py  installation.rst
docs/tutorials/: tutorial1.html
docs_source/source/: index.rst
experiments/: base.py  base_runner.py  exp_run_dist_thermometer_16.py  exp_run_thermometer_16.py  join_ram.py  mnist_dict.py  nested_encoding.py  normal_runner.py  ram_analyse.py
experiments/data_folded/: create_dataset_folds.py
experiments/results/: process_results.ipynb  process_results_2.ipynb
experiments/results_sklearn/: results_sklearn.csv
experiments_2/: analyse_results.ipynb  experiment_tune.py  experiment_tune_sklearn.py  process_results.py
tests/: builder.py  simple.py  simple_bloom.py  simple_builder.py  test_mnist_count_cuckoo_bloom.py  test_mnist_count_min_bloom.py  test_mnist_heavy_hitters_bloom.py  test_mnist_nested_thermometer_dict.py  test_mnist_stream_threshold_bloom.py  wisard.py
(+271 files in other folders)
