[build-system]
requires      = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wisardlib"
version = "0.0.1-dev"
description = "The WiSARD weigthless neural network"
readme = "README.md"
authors = [{name = "Otavio Napoli", email = "otavio.napoli@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["wisard", "ram-net", "machine learning", "wnn", "weigthless neural networks"]
dependencies = [
    "numba >= 0.56",
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "pyprobables"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "ipython",
    "sphinx",
    "sphinx-autoapi",
    "sphinx_rtd_theme",
    "nbsphinx",
    "pandoc",
    "Ipython",
    "toml"
]

[project.urls]
"Homepage" = "https://github.com/otavioon/wisardlib"
"Bug Tracker" = "https://github.com/otavioon/wisardlib/issues"
